# mkdocs-likec4

./: .dockerignore  CHANGELOG.md  Dockerfile  package-lock.json  package.json  pyproject.toml  requirements-docs.txt
.github/: dependabot.yml
docs/: index.md
mkdocs_likec4/: generator.py  parser.py  plugin.py
mkdocs_likec4/assets/: theme_sync.js
tests/: test_generator.py  test_parser.py  test_plugin.py
