[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-likec4"
description = "LikeC4 for MkDocs"
version = "1.1.2"
authors = [{ name = "Jonas Häusler", email = "jonas.haeusler@doubleslash.de" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mkdocs>=1.6",
  "pyjson5>=2.0",
]

[tool.setuptools.packages.find]
include = ["mkdocs_likec4*"]

[project.entry-points."mkdocs.plugins"]
"likec4" = "mkdocs_likec4.plugin:LikeC4Plugin"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$version"
version_provider = "uv"
version_files = [
    "pyproject.toml:version"
]

[tool.commitizen.customize]
bump_pattern = '^(feat|fix|ci|build|perf|refactor|chore)'
bump_map = { feat = "MINOR", fix = "PATCH", ci = "PATCH", build = "PATCH", perf = "PATCH", refactor = "PATCH", 'chore' = "PATCH" }
schema_pattern = '^(build|ci|docs|feat|fix|perf|refactor|style|test|chore|revert|bump|chore)(\(\S+\))?\:?\s.*'
changelog_pattern = '^(feat|fix|perf|refactor|build|ci|chore)(\(.+\))?!?:'
commit_parser = '^(?P<change_type>feat|fix|perf|refactor|build|ci|chore)(\((?P<scope>[^()\r\n]+)\))?!?:\s(?P<message>.+)'
change_type_map = { feat = "Features", fix = "Bug Fixes", perf = "Performance", refactor = "Refactor", build = "Build", ci = "CI", chore = "Chore" }
change_type_order = ["Features", "Bug Fixes", "Performance", "Refactor", "Build", "CI", "Chore"]

[dependency-groups]
dev = [
    "commitizen>=3.31.0",
    "ruff>=0.14.11",
]
test = [
    "pytest>=8.0",
]
